--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
         "@typescript-eslint"
     ],
     "rules": {
-        "@typescript-eslint/no-redeclare": 0
+        "@typescript-eslint/no-redeclare": 0,
+        "react/prop-types": 0
     }
 }
